--- a/Arcade-TaitoSJ.qsf
+++ b/Arcade-TaitoSJ.qsf
@@ -13,11 +13,11 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
-set_global_assignment -name LAST_QUARTUS_VERSION "17.0.2 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
 
 set_global_assignment -name GENERATE_RBF_FILE ON
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
+set_global_assignment -name NUM_PARALLEL_PROCESSORS 8
 set_global_assignment -name SAVE_DISK_SPACE OFF
 set_global_assignment -name SMART_RECOMPILE ON
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP "-40"
@@ -28,7 +28,7 @@ set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS OFF
 set_global_assignment -name OPTIMIZE_POWER_DURING_FITTING OFF
 set_global_assignment -name FINAL_PLACEMENT_OPTIMIZATION ALWAYS
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
-set_global_assignment -name OPTIMIZATION_MODE "HIGH PERFORMANCE EFFORT"
+set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
 set_global_assignment -name ALLOW_POWER_UP_DONT_CARE ON
 set_global_assignment -name QII_AUTO_PACKED_REGISTERS NORMAL
 set_global_assignment -name ROUTER_LCELL_INSERTION_AND_LOGIC_DUPLICATION ON
@@ -293,19 +293,6 @@ set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE archive/stp1_sounddebug.stp
 
 
-set_global_assignment -name SYSTEMVERILOG_FILE "Arcade-TaitoSJ.sv"
-set_global_assignment -name SDC_FILE "Arcade-TaitoSJ.sdc"
-set_global_assignment -name QIP_FILE rtl/index.qip
-set_global_assignment -name QIP_FILE "modules/cpu-t80/index.qip"
-set_global_assignment -name QIP_FILE "modules/sound-jt49/index.qip"
-set_global_assignment -name QIP_FILE sys/sys.qip
-set_global_assignment -name CDF_FILE jtag.cdf
-set_global_assignment -name SIGNALTAP_FILE sync.stp
-set_global_assignment -name SIGNALTAP_FILE stp1.stp
-set_global_assignment -name SIGNALTAP_FILE stp1_bunchofsignals.stp
-set_global_assignment -name SIGNALTAP_FILE stp1_spritedebug.stp
-set_global_assignment -name SIGNALTAP_FILE stp1_sounddebug.stp
-set_global_assignment -name SIGNALTAP_FILE archive/stp1_sounddebug.stp
 set_global_assignment -name SLD_NODE_CREATOR_ID 110 -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_ENTITY_NAME sld_signaltap -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_clk -to "emu:emu|taitosj_fpga:tssj|clkm_48MHZ" -section_id auto_signaltap_0
@@ -434,5 +421,16 @@ set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_COUNTER_PIPELINE=
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ADVANCED_TRIGGER_ENTITY=basic,1," -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_LEVEL_PIPELINE=1" -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ENABLE_ADVANCED_TRIGGER=0" -section_id auto_signaltap_0
-set_global_assignment -name SLD_FILE db/stp1_sounddebug_auto_stripped.stp
+set_global_assignment -name ALLOW_REGISTER_RETIMING OFF
+set_global_assignment -name QIP_FILE "modules/cpu-jt680x/index.qip"
+set_global_assignment -name SYSTEMVERILOG_FILE "Arcade-TaitoSJ.sv"
+set_global_assignment -name SDC_FILE "Arcade-TaitoSJ.sdc"
+set_global_assignment -name QIP_FILE rtl/index.qip
+set_global_assignment -name QIP_FILE "modules/cpu-t80/index.qip"
+set_global_assignment -name QIP_FILE "modules/sound-jt49/index.qip"
+set_global_assignment -name QIP_FILE sys/sys.qip
+set_global_assignment -name QIP_FILE sys/pll_hdmi.qip
+set_global_assignment -name QIP_FILE sys/pll_audio.qip
+set_global_assignment -name CDF_FILE jtag.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE db/stp1_sounddebug_auto_stripped.stp
